增加代码注释

--- a/Test Results - AllTest.html
+++ b/Test Results - AllTest.html
@@ -671,7 +671,7 @@ jQuery.cookie = function(name, value, options) {
 <li class="level top open">
 <span><em class="time">
 <div class="time">1 m 46 s</div>
-</em>testcase.pad.uitest.RokiPad_fan</span>
+</em>testcase.pad.uitest.RokiPad_fan_5916s</span>
 <ul>
 <li class="level test">
 <span><em class="time">
